--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "eslint": "^8.8.0",
-    "parcel": "~2.0",
+    "parcel": "^2.3",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
