--- a/functions/package.json
+++ b/functions/package.json
@@ -2,11 +2,12 @@
   "name": "functions",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
-    "build": "tsc",
-    "serve": "npm run build && firebase emulators:start --only functions",
+    "build": "npm run lint && tsc",
+    "build:watch": "npm run lint && tsc --watch --preserveWatchOutput",
+    "serve": "npm run build:watch && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
+    "deploy": "npn run lint && npm run build && firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
@@ -22,8 +23,11 @@
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "firebase-functions-test": "^0.2.0",
+    "prettier": "^2.5.1",
     "typescript": "^3.8.0"
   },
   "private": true
