--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel serve public/index.html",
-    "build": "parcel build public/index.html --dist-dir dist"
+    "build": "parcel build public/index.html --dist-dir dist",
+    "build:functions": "npm --prefix functions/ run build",
+    "serve:functions": "npm --prefix functions/ run serve",
+    "shell": "npm --prefix functions run shell",
+    "deploy:functions": "npm --prefix functions run deploy"
   },
   "repository": {
     "type": "git",
@@ -41,6 +45,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "eslint": "^8.8.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "parcel": "^2.3",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5",
