--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "serve:functions": "npm --prefix functions/ run serve",
     "shell": "npm --prefix functions run shell",
     "deploy:functions": "npm --prefix functions run deploy",
-    "start": "npm run build && npm run serve"
+    "start": "npm run build && npm run serve",
+    "clean": "npm run clean:debug && npm run clean:parcel",
+    "clean:debug": "shx rm './**debug.log'",
+    "clean:parcel": "shx rm -rf .parcel-cache/ dist/"
   },
   "repository": {
     "type": "git",
@@ -54,6 +57,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "parcel": "^2.3",
     "prettier": "^2.5.1",
+    "shx": "^0.3.4",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
