--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "A webapp for a community management platform, designed to fit the needs of retirement communities.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel serve src/index.html",
+    "dev": "parcel serve public/index.html",
     "build": "npm run build:functions && npm run build:webapp",
-    "build:webapp": "parcel build src/index.html",
+    "build:webapp": "parcel build public/index.html",
     "build:functions": "npm --prefix functions/ run build",
     "serve": "firebase emulators:start",
     "serve:functions": "npm --prefix functions/ run serve",
@@ -42,6 +42,7 @@
   },
   "homepage": "https://github.com/ADolbyB/community-oasis-dashboard#readme",
   "dependencies": {
+    "@babel/preset-typescript": "^7.16.7",
     "firebase-tools": "^10.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -50,6 +51,7 @@
     "@babel/core": "^7.17.2",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@types/node": "^17.0.17",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "eslint": "^8.8.0",
