--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clean:debug": "shx rm './**debug.log'",
     "clean:parcel": "shx rm -rf .parcel-cache/ dist/",
     "check": "tsc --noEmit",
-    "lint": "eslint"
+    "lint": "eslint src/**"
   },
   "repository": {
     "type": "git",
@@ -53,14 +53,18 @@
     "@types/node": "^17.0.17",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "eslint": "^8.8.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
     "parcel": "^2.3",
     "prettier": "^2.5.1",
     "shx": "^0.3.4",
-    "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.5.5"
   },
   "browserslist": {
     "production": [
@@ -75,6 +79,6 @@
     ]
   },
   "engines": {
-    "node": "16"
+    "node": ">=16"
   }
 }
