--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,11 @@
   "include": ["src/**/*"],
   "compilerOptions": {
     "target": "es2021",
+    "module": "ES2022",
     "strict": true,
     "moduleResolution": "Node",
     "isolatedModules": true,
-    "jsx": "react"
+    "jsx": "react",
+    "allowSyntheticDefaultImports": true
   }
 }
