--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clean:debug": "shx rm './**debug.log'",
     "clean:parcel": "shx rm -rf .parcel-cache/ dist/",
     "check": "tsc --noEmit",
-    "lint": "eslint src/**"
+    "lint": "eslint --ext js,ts,jsx,tsx src"
   },
   "repository": {
     "type": "git",
@@ -45,7 +45,6 @@
   },
   "homepage": "https://github.com/ADolbyB/community-oasis-dashboard#readme",
   "dependencies": {
-    "dotenv": "^16.0.0",
     "firebase": "^9.6.6",
     "firebase-tools": "^10.2.0",
     "react": "^17.0.2",
@@ -61,12 +60,9 @@
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "^8.8.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "parcel": "^2.3",
-    "prettier": "^2.5.1",
     "shx": "^0.3.4",
     "typescript": "^4.5.5"
   },
