--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^8.14.0",
     "@types/node": "^17.0.17",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
