--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
   },
   "homepage": "https://github.com/Midlight25/community-oasis-dashboard#readme",
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
     "firebase": "^9.6.6",
     "firebase-tools": "^10.2.0",
     "react": "^17.0.2",
