--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src/**/*"],
+  "include": ["src/**.ts", "src/**.tsx"],
   "compilerOptions": {
     "target": "es2021",
     "module": "ES2022",
