--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/lab": "^5.0.0-alpha.76",
+    "@types/date-fns": "^2.6.0",
     "firebase": "^9.6.6",
     "firebase-tools": "^10.2.0",
     "react": "^17.0.2",
