--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/icons-material": "^5.6.0",
     "@mui/lab": "^5.0.0-alpha.76",
     "@types/date-fns": "^2.6.0",
     "firebase": "^9.6.6",
