--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-react": "^7.28.0",
     "parcel": "^2.3",
+    "process": "^0.11.10",
     "shx": "^0.3.4",
     "typescript": "^4.5.5"
   },
