--- a/.github/workflows/project-ci.yml
+++ b/.github/workflows/project-ci.yml
@@ -10,7 +10,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-        with: node-version: 16
+        with: 
+          node-version: '16'
         cache: 'npm'
       - name: "Check Webapp Code"
       - run: npm ci
