--- a/.github/workflows/project-ci.yml
+++ b/.github/workflows/project-ci.yml
@@ -6,11 +6,10 @@ on:
     branches: [ main, dev ]
 jobs:
   test_code_push:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
-      - name: "Setup Environment"
-        uses: actions/checkout@v3
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with: 
           node-version: '16'
           cache: 'npm'
