--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Create .env file
-        uses: SpicyPizza/create-envfile@1.3.0
+        uses: SpicyPizza/create-envfile@v1.3.0
         with:
           envkey_API_KEY: ${{secrets.API_KEY}}
           envkey_AUTH_DOMAIN: ${{secrets.AUTH_DOMAIN}}
