--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,15 +12,25 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Create .env file
-        uses: SpicyPizza/create-envfile@v1.3.0
-        with:
-          envkey_API_KEY: ${{secrets.API_KEY}}
-          envkey_AUTH_DOMAIN: ${{secrets.AUTH_DOMAIN}}
-          envkey_PROJECT_ID: ${{secrets.PROJECT_ID}}
-          envkey_STORAGE_BUCKET: ${{secrets.STORAGE_BUCKET}}
-          envkey_MESSAGING_SENDER_ID: ${{secrets.MESSAGING_SENDER_ID}}
-          envkey_APP_ID: ${{secrets.APP_ID}}
-          envkey_MEASUREMENT_ID: ${{secrets.MEASUREMENT_ID}}
+        run: |
+          touch .env
+          echo API_KEY=${{secrets.API_KEY}} >> .env
+          echo AUTH_DOMAIN=${{secrets.AUTH_DOMAIN}} >> .env
+          echo PROJECT_ID=${{secrets.PROJECT_ID}} >> .env
+          echo STORAGE_BUCKET=${{secrets.STORAGE_BUCKET}} >> .env
+          echo MESSAGING_SENDER_ID=${{secrets.MESSAGING_SENDER_ID}} >> .env
+          echo APP_ID=${{secrets.APP_ID}} >> .env
+          echo MEASUREMENT_ID=${{secrets.MEASUREMENT_ID}} >> .env
+      # - name: Create .env file
+      #   uses: SpicyPizza/create-envfile@v1.3.0
+      #   with:
+      #     envkey_API_KEY: ${{secrets.API_KEY}}
+      #     envkey_AUTH_DOMAIN: ${{secrets.AUTH_DOMAIN}}
+      #     envkey_PROJECT_ID: ${{secrets.PROJECT_ID}}
+      #     envkey_STORAGE_BUCKET: ${{secrets.STORAGE_BUCKET}}
+      #     envkey_MESSAGING_SENDER_ID: ${{secrets.MESSAGING_SENDER_ID}}
+      #     envkey_APP_ID: ${{secrets.APP_ID}}
+      #     envkey_MEASUREMENT_ID: ${{secrets.MEASUREMENT_ID}}
       - run: npm ci && npm --prefix functions ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
