--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -3,22 +3,24 @@
 
 name: "Deploy to Firebase Hosting on PR"
 'on': pull_request
+
+environment: deploy
+env:
+  API_KEY: ${{secrets.API_KEY}}
+  AUTH_DOMAIN: ${{secrets.AUTH_DOMAIN}}
+  PROJECT_ID: ${{secrets.PROJECT_ID}}
+  STORAGE_BUCKET: ${{secrets.STORAGE_BUCKET}}
+  MESSAGING_SENDER_ID: ${{secrets.MESSAGING_SENDER_ID}}
+  APP_ID: ${{secrets.APP_ID}}
+  MEASUREMENT_ID: ${{secrets.MEASUREMENT_ID}}
+
+
 jobs:
   build_and_preview:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Create .env file
-        run: |
-          touch .env
-          echo API_KEY=${{secrets.API_KEY}} >> .env
-          echo AUTH_DOMAIN=${{secrets.AUTH_DOMAIN}} >> .env
-          echo PROJECT_ID=${{secrets.PROJECT_ID}} >> .env
-          echo STORAGE_BUCKET=${{secrets.STORAGE_BUCKET}} >> .env
-          echo MESSAGING_SENDER_ID=${{secrets.MESSAGING_SENDER_ID}} >> .env
-          echo APP_ID=${{secrets.APP_ID}} >> .env
-          echo MEASUREMENT_ID=${{secrets.MEASUREMENT_ID}} >> .env
         # uses: SpicyPizza/create-envfile@v1.3.0
         # with:
         #   envkey_API_KEY: ${{secrets.API_KEY}}
