--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -20,16 +20,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        # uses: SpicyPizza/create-envfile@v1.3.0
-        # with:
-        #   envkey_API_KEY: ${{secrets.API_KEY}}
-        #   envkey_AUTH_DOMAIN: ${{secrets.AUTH_DOMAIN}}
-        #   envkey_PROJECT_ID: ${{secrets.PROJECT_ID}}
-        #   envkey_STORAGE_BUCKET: ${{secrets.STORAGE_BUCKET}}
-        #   envkey_MESSAGING_SENDER_ID: ${{secrets.MESSAGING_SENDER_ID}}
-        #   envkey_APP_ID: ${{secrets.APP_ID}}
-        #   envkey_MEASUREMENT_ID: ${{secrets.MEASUREMENT_ID}}
-      - run: npm ci && npm --prefix functions ci && npm run build
+      - uses: actions/setup-node@v3
+        with: 
+          node-version: '16'
+          cache: 'npm'
+      - name: "Install Webapp Dependencies"
+        run: npm ci
+      - name: "Install Functions Dependencies"
+        run: npm --prefix functions ci
+      - name: "Build Project"
+        run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
