--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,32 +6,31 @@ name: "Deploy to Firebase Hosting on merge"
   push:
     branches:
       - main
+
+env:
+  API_KEY: ${{secrets.API_KEY}}
+  AUTH_DOMAIN: ${{secrets.AUTH_DOMAIN}}
+  PROJECT_ID: ${{secrets.PROJECT_ID}}
+  STORAGE_BUCKET: ${{secrets.STORAGE_BUCKET}}
+  MESSAGING_SENDER_ID: ${{secrets.MESSAGING_SENDER_ID}}
+  APP_ID: ${{secrets.APP_ID}}
+  MEASUREMENT_ID: ${{secrets.MEASUREMENT_ID}}
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Create .env file
-        run: |
-          touch .env
-          echo API_KEY=${{secrets.API_KEY}} >> .env
-          echo AUTH_DOMAIN=${{secrets.AUTH_DOMAIN}} >> .env
-          echo PROJECT_ID=${{secrets.PROJECT_ID}} >> .env
-          echo STORAGE_BUCKET=${{secrets.STORAGE_BUCKET}} >> .env
-          echo MESSAGING_SENDER_ID=${{secrets.MESSAGING_SENDER_ID}} >> .env
-          echo APP_ID=${{secrets.APP_ID}} >> .env
-          echo MEASUREMENT_ID=${{secrets.MEASUREMENT_ID}} >> .env
-      # - name: Create .env file
-      #   uses: SpicyPizza/create-envfile@v1.3.0
-      #   with:
-      #     envkey_API_KEY: ${{secrets.API_KEY}}
-      #     envkey_AUTH_DOMAIN: ${{secrets.AUTH_DOMAIN}}
-      #     envkey_PROJECT_ID: ${{secrets.PROJECT_ID}}
-      #     envkey_STORAGE_BUCKET: ${{secrets.STORAGE_BUCKET}}
-      #     envkey_MESSAGING_SENDER_ID: ${{secrets.MESSAGING_SENDER_ID}}
-      #     envkey_APP_ID: ${{secrets.APP_ID}}
-      #     envkey_MEASUREMENT_ID: ${{secrets.MEASUREMENT_ID}}
-      - run: npm ci && npm --prefix functions ci && npm run build
+      - uses: actions/setup-node@v3
+        with: 
+          node-version: '16'
+          cache: 'npm'
+      - name: "Install Webapp Dependencies"
+        run: npm ci
+      - name: "Install Functions Dependencies"
+        run: npm --prefix functions ci
+      - name: "Build Project"
+        run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
